@@ -22,7 +22,7 @@
 
 using namespace std;
 
-scoped_ptr<partition_files> sample_file_partition;
+vector<partition_files> sample_file_partition;
 
 namespace options {
 	bool demangle = true;
@@ -125,16 +125,8 @@ void handle_options(vector<string> const & non_options)
 		exit(EXIT_FAILURE);
 	}
 
-	if (unmerged_profile.size() > 1) {
-		// quick and dirty check for now
-		cerr << "Can't handle multiple counter!" << endl;
-		cerr << "use event:xxxx and/or count:yyyyy to restrict "
-		     << "samples files set considered\n" << endl;
-		exit(EXIT_FAILURE);
-	}
-
 	// we always merge but this have no effect on output since at source
-	// or assembly point of view the result be merged anyway
+	// or assembly point of view the result will be merged anyway
 	merge_option merge_by;
 	merge_by.cpu = true;
 	merge_by.lib = true;
@@ -142,6 +134,15 @@ void handle_options(vector<string> const & non_options)
 	merge_by.tgid = true;
 	merge_by.unitmask = true;
 
-	sample_file_partition.reset(
-		new partition_files(sample_files, merge_by));
+	unmergeable_samplefile unmerged_samplefile =
+		unmerge_samplefile(sample_files, unmerged_profile);
+
+	unmergeable_samplefile::const_iterator const cend =
+		unmerged_samplefile.end();
+	unmergeable_samplefile::const_iterator cit =
+		unmerged_samplefile.begin();
+	for ( ; cit != cend ; ++cit) {
+		sample_file_partition.push_back(
+			partition_files(*cit, merge_by));
+	}
 }
